--- a/XAFExt/trunk/IntecoAG.XAF.Data.Filtering/IntecoAG.XafExt.Data.Filtering/IntecoAG.XafExt.Data.Filtering.csproj
+++ b/XAFExt/trunk/IntecoAG.XAF.Data.Filtering/IntecoAG.XafExt.Data.Filtering/IntecoAG.XafExt.Data.Filtering.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{A3F4610D-C605-482C-A4EB-64F0A7C4459D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IntecoAG.XafExt.Data.Filtering</RootNamespace>
+    <RootNamespace>IntecoAG.XafExt</RootNamespace>
     <AssemblyName>IntecoAG.XafExt.Data.Filtering</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -52,6 +52,7 @@
       <Name>System</Name>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
       <Private>False</Private>
@@ -80,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="XafExtDataFilteringModule.resx">
       <DependentUpon>XafExtDataFilteringModule.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -89,9 +91,10 @@
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
