--- a/IntecoAG.XAFExt.CDS/IntecoAG.XAFExt.CDS/IntecoAG.XAFExt.CDS.csproj
+++ b/IntecoAG.XAFExt.CDS/IntecoAG.XAFExt.CDS/IntecoAG.XAFExt.CDS.csproj
@@ -136,6 +136,7 @@
       <DependentUpon>Module.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
