--- a/IntecoAG.XafExt.RefReplace/IntecoAG.XafExt.RefReplace/IntecoAG.XafExt.RefReplace.csproj
+++ b/IntecoAG.XafExt.RefReplace/IntecoAG.XafExt.RefReplace/IntecoAG.XafExt.RefReplace.csproj
@@ -71,7 +71,7 @@
     <Reference Include="DevExpress.XtraEditors.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v19.2, Version=19.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Npgsql, Version=4.0.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\Npgsql.4.0.3\lib\net451\Npgsql.dll</HintPath>
+      <HintPath>..\..\packages\Npgsql.4.0.3\lib\net451\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="RefReplaceModule.resx">
       <SubType>Designer</SubType>
       <DependentUpon>RefReplaceModule.cs</DependentUpon>
@@ -135,7 +136,6 @@
     <EmbeddedResource Include="Controllers\SearchViewController.resx">
       <DependentUpon>SearchViewController.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DatabaseUpdate\ReadMe.txt" />
